// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command git it should be create the expected builder: options 1`] = `
Array [
  Object {
    "edit": Object {
      "desc": "Path to the COMMIT_EDITMSG file (only at hook \\"msg\\")",
      "group": "git-Options",
      "type": "string",
    },
    "hook": Object {
      "choices": Array [
        "msg",
        "commit",
      ],
      "group": "git-Options",
      "require": true,
    },
  },
]
`;

exports[`command git it should be create the expected builder: usage 1`] = `
Array [
  "Usage: $0 git [options]",
]
`;

exports[`command git with unknwon hook it should throw an error with hooks: child-process 1`] = `
Object {
  "args": Array [
    "run",
    "precarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with unknwon hook it should throw an error with hooks: child-process 2`] = `
Object {
  "args": Array [
    "diff",
    "--staged",
    "--name-only",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with unknwon hook it should throw an error with hooks: child-process 3`] = `
Object {
  "args": Array [
    "ls-files",
    "--exclude-standard",
    "--modified",
    "--others",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with unknwon hook it should throw an error: child-process 1`] = `
Object {
  "args": Array [
    "diff",
    "--staged",
    "--name-only",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;

exports[`command git with unknwon hook it should throw an error: child-process 2`] = `
Object {
  "args": Array [
    "ls-files",
    "--exclude-standard",
    "--modified",
    "--others",
  ],
  "command": "git",
  "cwd": "/path/to/project",
  "env": Object {},
}
`;
